--- a/config.toml
+++ b/config.toml
@@ -18,9 +18,9 @@ enableRobotsTXT = true
 disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
-  blog = "/:slug/"
-  zh = "/:slug/"
-  tags = "/blog/:slug"
+  blog = "/blog/:slug/"
+  zh = "/zh/:slug/"
+  tags = "/:slug/"
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
