--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -33,6 +34,9 @@ Temporary Items
 ### macOS Patch ###
 # iCloud generated files
 *.icloud
+
+### hugo generated public folder ###
+public
 
 # End of https://www.toptal.com/developers/gitignore/api/macos
 n
