--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,14 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "https://rexarski.com"
+baseURL = "https://rqiu.dev"
 
 # The name of this wonderful theme ;-).
 theme = 'hugo-bearblog'
 
 # Basic metadata configuration for your blog.
-title = "rexarski"
-author = "Rui Qiu"
-copyright = "Copyright © 2023 Rui Qiu."
+title = "rqiu.dev"
+author = "rui qiu"
+copyright = "Copyright © 2024 rui qiu"
 languageCode = "en-US"
 
 # Generate a nice robots.txt for SEO
@@ -39,7 +39,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Another "title" :-). This one is used as the site_name on the Hugo's internal
   # opengraph structured data template.
   # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "rexarski"
+  title = "rui"
 
   # This theme will, by default, inject a made-with-line at the bottom of the page.
   # You can turn it off, but we would really appreciate if you don’t :-).
