[REFACTOR, REMOVE] remove zh and redundant contents
- replace post directory from /blog to /posts
- update with new domain name

--- a/config.toml
+++ b/config.toml
@@ -18,8 +18,7 @@ enableRobotsTXT = true
 disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
-  blog = "/blog/:slug/"
-  zh = "/zh/:slug/"
+  posts = "/posts/:slug/"
   tags = "/:slug/"
 
 [params]
