--- a/config.toml
+++ b/config.toml
@@ -1,12 +1,12 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "https://rqiu.dev"
+baseURL = "https://rexarski.com"
 
 # The name of this wonderful theme ;-).
 theme = 'hugo-bearblog'
 
 # Basic metadata configuration for your blog.
-title = "rqiu.dev"
+title = "rexarski.log()"
 author = "rui qiu"
 copyright = "Copyright © 2024 rui qiu"
 languageCode = "en-US"
@@ -19,6 +19,7 @@ disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
   posts = "/posts/:slug/"
+  zh = "/zh/:slug/"
   tags = "/:slug/"
 
 [params]
@@ -38,7 +39,7 @@ ignoreErrors = ["error-disable-taxonomy"]
   # Another "title" :-). This one is used as the site_name on the Hugo's internal
   # opengraph structured data template.
   # See https://ogp.me/ and https://gohugo.io/templates/internal#open-graph.
-  title = "rui"
+  title = "rexarski"
 
   # This theme will, by default, inject a made-with-line at the bottom of the page.
   # You can turn it off, but we would really appreciate if you don’t :-).
