[UPDATE] update now and index page

--- a/config.toml
+++ b/config.toml
@@ -19,6 +19,7 @@ disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
   posts = "/posts/:slug/"
+  ideas = "/ideas/:slug/"
   zh = "/zh/:slug/"
   tags = "/:slug/"
 
