[REFACTOR] blog reorg in May 2024
- remove ideas related content (page, nav, and slug)
- add links related content (page, nav, and slug) as placeholder
- update home page by adding recent posts
- update now, maui page title format
- update table alignment in setapp post
- update zh index page title (metadata)
- fix issue where first letter is unnecessarily uppercased in tags
- add easter egg in footer.html
- add shortcode for recent blog posts
- add style for table and recent blog post list

--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ ignoreErrors = ["error-disable-taxonomy"]
 [permalinks]
   posts = "/posts/:year/:month/:slug/"
   zh = "/zh/:year/:month/:slug/"
-  ideas = "/ideas/:slug/"
+  links = "/links/:year/:month/:slug/"
   tags = "/:slug/"
 
 [params]
