[UPDATE] now page as of 2025-01-27 - Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,8 @@ Temporary Items
 public
 isableFastRender
 
+### vscode generated files ###
+.vscode
+
 # End of https://www.toptal.com/developers/gitignore/api/macos
 n
