--- a/.github/workflows/update-neodb.yml
+++ b/.github/workflows/update-neodb.yml
@@ -8,9 +8,9 @@ on:
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
 
-    # Runs the workflow every 12 hours at 12 AM and 12 PM ET (4:00 and 16:00 UTC)
+    # Runs the workflow "at 04:04 (UTC) on every 2nd day-of-month."
     schedule:
-        - cron: '0 0 * * 1'
+        - cron: '4 4 */2 * *'
 
 jobs:
     # A single job called "build"
