feat(site): design refresh, relation graph, RSS/style tweaks
- Add SVG wordmark, site description, nav active state, dark mode icon
- Add RSS yellow underline (nav + footer), footer toolbox/changelog links
- Add 3px accent bar, unified 3px underlines, typography/blockquote tweaks
- Add dark mode (no flash), graph overlay on /posts/ with embeddings
- Add graph section + JSON output; dithering caption; signature animation tweak
- Update homepage (dithering hero), now page (heatmap, marquee, progress bars)

--- a/config.toml
+++ b/config.toml
@@ -17,9 +17,16 @@ enableRobotsTXT = true
 # Generate "Bearblog"-like URLs !only!, see https://bearblog.dev/.
 disableKinds = ["taxonomy"]
 ignoreErrors = ["error-disable-taxonomy"]
+
+[outputs]
+section = ["HTML", "JSON"]
+
 [permalinks]
   posts = "/posts/:year/:month/:slug/"
   tags = "/:slug/"
+
+[markup.goldmark.renderer]
+  unsafe= true
 
 [params]
   # The "description" of your website. This is used in the meta data of your generated html.
@@ -52,9 +59,6 @@ ignoreErrors = ["error-disable-taxonomy"]
   # for details. An example TOML config that uses [ISO
   # 8601](https://en.wikipedia.org/wiki/ISO_8601) format:
   dateFormat = "2006-01-02"
-
-[markup.goldmark.renderer]
-  unsafe= true
 
 [markup.tableOfContents]
   startLevel = 2
